# multilingual

./: .gitignore  .tool-versions  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
ftanyol/: multilingual.py
multilingual/: main.py  multilingual.py
tests/: test_multilingual.py
