[tool.poetry]
name = "multilingual"
version = "0.1.1"
description = "A command line application that automatically translates the input sentence to multiple languages adds the translations to respective translation json files"
authors = ["Furkan Tanyol <ftanyol@securecodewarrior.com>"]
keywords = ["translation", "translations", "automated translations"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/furkantanyol/multilingual"
repository = "https://github.com/furkantanyol/multilingual"
include = ["LICENSE"]

[tool.poetry.scripts]
multilingual = "multilingual.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
googletrans = "^4.0.0rc1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
